uat/sample-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-web
  annotations:
    cert-manager.io/cluster-issuer: local-selfsigned
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sample-web.uat-sample-web.ingress.chucthien.com
      secretName: sample-web-local-tls
  rules:
    - host: sample-web.uat-sample-web.ingress.chucthien.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-web
                port:
                  name: http
